Move environment variables to .env file and update README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,5 @@ services:
     build: .
     ports:
       - "8080:8080"
-    environment:
-      - JELLYFIN_BASE_URL=http://play.davidperezmillan.com/
-      - JELLYFIN_TOKEN=ee4bf04cad094a7b80d54adc8d7ae4ec
-      - JELLYFIN_USER_NAME=apps
+    env_file:
+      - .env
