--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy to server
-      uses: appleboy/ssh-action@v1
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /path/to/jellyfinplus
-          docker-compose pull
-          docker-compose up -d
-          docker system prune -f
+    - name: loggear la WEBHOOKS_STACK
+      run: echo ${{ vars.WEBHOOKS_STACK_LATEST }}
+
+    - name: Deploy to Portainer
+      run: curl -X POST ${{ vars.WEBHOOKS_STACK_LATEST }}
