--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <mainClass>com.davidperezmillan.jellyfinplus.JellyfinplusApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
