Implement Transmission API integration with repository and service layers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,7 @@ services:
       - JELLYFIN_BASE_URL=${JELLYFIN_BASE_URL}
       - JELLYFIN_TOKEN=${JELLYFIN_TOKEN}
       - JELLYFIN_USER_NAME=${JELLYFIN_USER_NAME}
+      - TRANSMISSION_BASE_URL=${TRANSMISSION_BASE_URL}
+      - TRANSMISSION_USERNAME=${TRANSMISSION_USERNAME}
+      - TRANSMISSION_PASSWORD=${TRANSMISSION_PASSWORD}
 
