--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
 
+transmission:
+  baseUrl: ${TRANSMISSION_BASE_URL}
+  username: ${TRANSMISSION_USERNAME}
+  password: ${TRANSMISSION_PASSWORD}
